Remove use of deprecated Float constructor